# lightoracle

./: .env.example  .gitignore  README.md  config_example.py  example.py  pyproject.toml  reset_password_example.py  setup.py
conda_env/: local_install.yaml  remote_install.yaml
lightoracle/: __init__.py  oracle_connect.py
lightoracle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
